added fluent log forwarding

--- a/example.env
+++ b/example.env
@@ -6,3 +6,5 @@ DSS_REQUEST_SCOPE = utm.constraint_management utm.strategic_coordination
 DSS_REQUEST_INTENDED_AUDIENCE = core-service
 DSS_API_KEY = cacf7965-df13-4209-9635-6b53e2f9579f
 DSS_REQUEST_SUB = icea
+
+FLUENT_HOST_URL=localhost
