--- a/requirements.txt
+++ b/requirements.txt
@@ -253,6 +253,21 @@ pytest-logger==1.1.1 \
     --hash=sha256:82cb36b505a72e15a2f0e12c6451d8c21ecbe0379d322b2bed4f05cb7842c9d9 \
     --hash=sha256:d9f7b88c04828de649a033779d30f359fce026fde37c1e91d83336a66d27a9fb
     # via -r requirements.in
+    #   pytest-html
+    #   pytest-logger
+    #   pytest-metadata
+pytest-html==4.1.1 \
+    --hash=sha256:70a01e8ae5800f4a074b56a4cb1025c8f4f9b038bba5fe31e3c98eb996686f07 \
+    --hash=sha256:c8152cea03bd4e9bee6d525573b67bbc6622967b72b9628dda0ea3e2a0b5dd71
+    # via -r requirements.in
+pytest-logger==1.1.1 \
+    --hash=sha256:82cb36b505a72e15a2f0e12c6451d8c21ecbe0379d322b2bed4f05cb7842c9d9 \
+    --hash=sha256:d9f7b88c04828de649a033779d30f359fce026fde37c1e91d83336a66d27a9fb
+    # via -r requirements.in
+pytest-metadata==3.1.1 \
+    --hash=sha256:c8e0844db684ee1c798cfa38908d20d67d0463ecb6137c72e91f418558dd5f4b \
+    --hash=sha256:d2a29b0355fbc03f168aa96d41ff88b1a3b44a3b02acbe491801c98a048017c8
+    # via pytest-html
 python-dotenv==1.0.1 \
     --hash=sha256:e324ee90a023d808f1959c46bcbc04446a10ced277783dc6ee09987c37ec10ca \
     --hash=sha256:f7b63ef50f1b690dddf550d03497b66d609393b40b564ed0d674909a68ebf16a
