added fluentd logger driver to service and removed fluentd handler

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,10 @@ services:
       context: .
       dockerfile: Dockerfile
     image: ussp-validator-suite
+    logging:
+      driver: fluentd
+      options:
+        tag: ussp-validator-suite
     ports:
       - '8000:8000'
     volumes:
