--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+generate_report_on_test = True
+
 log_cli = true
 log_cli_level = DEBUG
 log_format = %(asctime)s %(levelname)s %(message)s
